# jcllib

./: CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: cmake.yml
example/: CMakeLists.txt  PingPong.cpp  PingPong.hpp  main.cpp
include/jcllib/: Client.hpp  Connection.hpp  Node.hpp  Service.hpp
include/jcllib/exception/: NotConnectionException.hpp
src/: CMakeLists.txt  Client.cpp  Connection.cpp  Node.cpp  Service.cpp
test/: CMakeLists.txt  client_test.cpp  main.cpp  node_test.cpp
